# yolov7_s

./: .detect.py.swp  .gitattributes  1.out  2.out  3.out  4.out  README.md  bbox.txt  detect.py  detect_bbox.py  detect_bbox.sh  detect_find.py  detect_find.sh  detect_img.sh  detect_img_tcp.sh  detect_ros.py  detect_ros.sh  detect_tcp.py  robint  ros_detect.py  ros_detect.sh  rundocker.txt  save_image.py  save_video.py  test.txt  train.py  train.sh
cfg/training/: yolov7-tiny.yaml  yolov7.yaml
data/: coco.yaml  data_test_voc.yaml  zhuitong.yaml
datasets/zhuitong/: train.cache  train.txt  valid.txt  yolotxt.py
models/: yolo.py
tracking_mask/: run.sh  start_video.txt
tracking_mask/toolkit/utils/: region.c
tracking_mask/tools/: debug.py  demo.py  iov.py  merge_layer_weights.py  pth2wts_merge_bn.py  run_video.sh  save_weights.py
tracking_mask/tools/cache/: backbone.features.1.running_mean.prototxt  backbone.features.12.running_mean.prototxt  backbone.features.15.running_mean.prototxt  backbone.features.5.running_mean.prototxt  backbone.features.9.running_mean.prototxt  backbone.features.9.running_var.prototxt  layer_names.txt  layer_weights.txt  rpn_head.cls.conv_kernel.1.running_mean.prototxt  rpn_head.cls.conv_search.1.running_mean.prototxt  rpn_head.cls.conv_search.1.running_var.prototxt  (+5 more)
tracking_mask/tools/pytorch2caffe/: CMakeCache.txt  CMakeLists.txt  Makefile  ReadMe.md  cat.sh  cmake_install.cmake  index.txt  net.prototxt  read_model.py  split.prototxt  wm.cpp  write_model
utils/: datasets.py  general.py  plots.py
(+638 files in other folders)
